implemented car adding

--- a/CarRentingSystem/appsettings.json
+++ b/CarRentingSystem/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CarRentingSystem-429F36E9-091A-4EFB-8CFD-78F15B175C4E;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-FBR6M5G\\SQLEXPRESS;Database=CarRentingSystem;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
